# RAG-for-practice

./: .env.example  .gitignore  LICENSE  README.md  chat.py  chat_history.py  client.py  configdata.py  file_uploader.py  knowledge_base.py  pyproject.toml  rag.py  requirements.txt  services.py  vector_stores.py
app/core/: __init__.py  rag.py  services.py
app/services/: __init__.py  chat_history.py  knowledge_base.py  vector_stores.py
app/ui/: client.py  file_uploader.py
